# trainwatch.in

./: .gitignore  CHANGELOG.md  README.md  TrainWatch_readme.txt  WBS.md  WBS_PHASE_02.md  WBS_PHASE_02_1_TELEGRAM.md  phase - 01.txt  pyproject.toml
cloudflare/: README.md  schema.sql  wrangler.toml
cloudflare/src/: worker.js
docs/: architecture.md  phase-02.md  release.md
examples/: basic_training.py  cloud_setup.py  cloud_training.py  full_demo.ipynb  getting_started.ipynb  phase02_test_lab.ipynb
examples/.ipynb_checkpoints/: phase02_test_lab-checkpoint.ipynb
tests/: test_api.py  test_best_model.py  test_llm.py  test_metrics.py  test_monitor.py  test_report.py  test_rules.py  test_summary.py
trainwatch/: __init__.py  cli.py  cloud.py  config.py  exceptions.py  help.py  logger.py  monitor.py  notifier.py  runtime.py  summary.py
trainwatch/notifications/: email_notifier.py  telegram_notifier.py
trainwatch/utils/: error_utils.py  time_utils.py
trainwatcher/: __init__.py  api.py  best_model.py  cli.py  cloud.py  config.py  contracts.py  exceptions.py  help.py  llm.py  logger.py  metrics.py  monitor.py  notifier.py  prompts.py  report.py  rules.py  runtime.py  suggestions.py  summary.py
trainwatcher/notifications/: email_notifier.py  telegram_notifier.py
trainwatcher/utils/: error_utils.py  time_utils.py
