[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trainwatch-notify"
version = "0.1.1"
description = "Lightweight training awareness system for machine learning workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "TrainWatch Contributors" }
]
keywords = ["ml", "training", "monitoring", "notifications"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/sambitmahapatra/trainwatch.in"

[project.scripts]
trainwatch = "trainwatch.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["trainwatch*"]
